# bytecode

./: .gitignore  README.md  pyproject.toml
bytecode/: __init__.py  manual.py  symbols.py
tests/: test_bytecode.py
